--- a/sources/less/smartadmin/plugin-dataTables-cust.less
+++ b/sources/less/smartadmin/plugin-dataTables-cust.less
@@ -40,7 +40,7 @@ table.dataTable thead .sorting_desc_disabled { background: url(data:image/png;ba
 
 table.dataTable thead .sorting_asc,
 table.dataTable thead .sorting_desc {
-	background-color: rgb(238, 238, 238);
+	//background-color: rgb(238, 238, 238);
 }
 
 .dataTables_empty {
